# trading-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
backtest/: detector.py  multi_tf_simulator.py  optimizer.py  run.py
bot/: config.py  instruments.py  main.py  models.py
bot/dashboard/: __init__.py  middleware.py  queries.py  routes.py  setup_users.py
bot/dashboard/templates/: base.html  brokers.html  change_password.html  equity.html  login.html  overview.html  performance.html  positions.html  public_stats.html  reset_password.html  risk.html  settings.html  signals.html
bot/dashboard/views/: auth.py  brokers.py  equity.py  overview.py  risk.py  (+5 more)
bot/database/: connection.py  queries.py  schema.sql
bot/layer1_data/: broker_interface.py  broker_router.py  ig_client.py  ig_rate_limiter.py  ig_session.py  ig_stock_broker.py  indicators.py  market_data.py  oanda_client.py  payload_builder.py  yahoo_provider.py
bot/layer2_intelligence/: claude_client.py  prompts.py  scoring.py  tools.py  validator.py
bot/layer3_execution/: engine.py  order_state.py
bot/layer4_risk/: manager.py
bot/layer5_monitoring/: health.py  logger.py  outcome_tracker.py  sms.py  telegram.py
tasks/: handoff.md  lessons.md  todo.md
tests/: conftest.py  test_config.py  test_engine.py  test_execution.py  test_health.py  test_ig_stock_broker.py  test_payload_builder.py  test_risk_manager.py  test_scoring.py  test_validator.py  test_yahoo_provider.py
(+9 files in other folders)
